Fix language typos.

--- a/Assets/Languages/en-gb.json
+++ b/Assets/Languages/en-gb.json
@@ -2,6 +2,7 @@
   "Admin_Login": "Administrator Login",
   "Error": "Error",
   "Error_Information": "Error Information",
+  "Home": "Home",
   "Loading": "Loading",
   "Login": "Login",
   "Maintenance_Mode_Message_1": "This website is in maintenance mode.",
@@ -11,7 +12,6 @@
   "No_Homepage_Instructions_2": ". You can do this by clicking the login button below and clicking 'Add home screen' in the Saturn Control Panel.",
   "Operating_System": "Operating System",
   "PHP_Version": "PHP Version",
-  "Register": "Register",
   "Request_IP": "Request IP",
   "Request_Time": "Request Time",
   "Request_URI": "Request URI",
