--- a/Plugins/ControlPanel/Assets/Languages/en-gb.json
+++ b/Plugins/ControlPanel/Assets/Languages/en-gb.json
@@ -15,6 +15,7 @@
   "Join": "Join",
   "Loaded": "Loaded",
   "Login": "Login",
+  "NoPages": "No pages.",
   "Pages": "Pages",
   "Password": "Password",
   "Plugin_About": "About the Plugin",
