--- a/Assets/Languages/en-gb.json
+++ b/Assets/Languages/en-gb.json
@@ -19,7 +19,7 @@
   "Saturn_Control_Panel": "Saturn Control Panel",
   "Server_Information": "Server Information",
   "Server_Port": "Server Port",
-  "Server_Protocol": "Server Procol",
+  "Server_Protocol": "Server Protocol",
   "Server_Software": "Server Software",
   "Software_Version": "Software Version"
 }
